<resources>
    <string name="app_name">Simple Login</string>
    <string name="login">Login</string>
    <string name="login_tips">Use your DDF account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forge_password">Forge Password</string>
    <string name="create">Create</string>
    <string name="not_implement">Not implement</string>
    <string name="deep_dark_fantasy">Deep Dark Fantasy</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="create_account">Create Account</string>
    <string name="password_verify">Password Verify</string>
    <string name="send_verify_code">Send</string>
    <string name="verify_code">Verify Code</string>
    <string name="invlaid_input">Invalid Input</string>
    <string name="create_your_account">Create your account</string>
    <string name="password_not_matched">Not match</string>
    <string name="invalid_verify_code">Invalid Verify Code</string>
    <string name="email">E-Mail</string>
    <string name="empty_username">Empty Username</string>
    <string name="empty_password">Empty password</string>
    <string name="fetching_model">Fetching model...</string>
</resources>